Uploaded image for project: 'Core ReactOS'
  1. Core ReactOS
  2. CORE-10923

WINTRUST: WinVerifyTrust does not validate digest

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Major
    • 0.4.1
    • Wine
    • None

    Description

      Currently WinVerifyTrust does not validate the file digest at all.

      Attached patch aims to remedy this.
      Can someone please review this before i send it to wine-staging?

      Attachments

        1. softpub.c.patch
          5 kB
        2. softpub.c.patch
          5 kB
        3. winetest.softpub.c.patch
          19 kB
        4. winetest.softpub.c.patch
          39 kB
        5. wintrust.patch
          25 kB
        6. wintrust2.patch
          23 kB

        Activity

          People

            AmineKhaldi AmineKhaldi
            learn_more Mark Jansen
            Votes:
            1 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: