[WINTRUST] Import Wine Staging commit bdb15cf by Mark Jansen: Verify image hash in WinVerifyTrust. CORE-10923

svn path=/trunk/; revision=71113